src/objects/Class_Member__c.object
<CustomObject>
    <description>Class Member is a buffer object for Campaign Member since unable to create a Campaign Member externally.</description>
    <fields>
        <fullName>CampaignId__c</fullName>
        <label>CampaignId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadId__c</fullName>
        <label>LeadId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>c501_cm__Training_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Class Member</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Class Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>